@@ -275,7 +275,7 @@ include_once('include/page_header.php');
 					case TRIGGER_SEVERITY_AVERAGE:  	$hl_color = hex2rgb('DDAAAA'); break;
 					case TRIGGER_SEVERITY_WARNING:  	$hl_color = hex2rgb('EFEFCC'); break;
 					case TRIGGER_SEVERITY_INFORMATION:  $hl_color = hex2rgb('CCE2CC'); break;
-					case TRIGGER_SEVERITY_NOT_CLASSIFIED: $hl_color = hex2rgb('AAFFAA'); break;
+					case TRIGGER_SEVERITY_NOT_CLASSIFIED: $hl_color = hex2rgb('C0E0C0'); break;
 					default:
 				}
 			}
@@ -366,7 +366,7 @@ include_once('include/page_header.php');
 		$info_line	= '';
 
 		$label_location = $selement['label_location'];
-		if(is_null($label_location)) $label_location = $map['label_location'];
+		if(is_null($label_location) || ($label_location < 0)) $label_location = $map['label_location'];
 
 		$label_line = expand_map_element_label_by_data($selement);
 
